[tool.poetry]
name = "pymotw-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.2.2"
pyenchant = "^3.2.2"
feedparser = "^6.0.11"
gnureadline = "^8.2.10"
alabaster = "0.7.12"
Babel = "2.6.0"
certifi = "2018.11.29"
chardet = "3.0.4"
cogapp = "2.5.1"
cssselect = "1.0.3"
docutils = "0.14"
flake8 = "3.6.0"
future = "0.17.1"
idna = "2.7"
imagesize = "1.1.0"
Jinja2 = "2.10"
MarkupSafe = "1.1.0"
mccabe = "0.6.1"
oauthlib = "2.1.0"
packaging = "18.0"
Paver = "1.3.4"
pep8 = "1.7.1"
pybitbucket = "0.12.0"
pycodestyle = "2.4.0"
pyflakes = "2.0.0"
Pygments = "2.3.0"
pyparsing = "2.3.0"
pyquery = "1.4.0"
python-wordpress-xmlrpc = "2.3"
pytz = "2018.7"
requests = "2.20.1"
requests-oauthlib = "0.7.0"
simplejson = "3.16.0"
six = "1.11.0"
snowballstemmer = "1.2.1"
Sphinx = "1.8.2"
sphinx-rtd-theme = "0.4.2"
sphinxcontrib-paverutils = "1.17.0"
sphinxcontrib-websupport = "1.1.0"
uritemplate = "0.6.0"
urllib3 = "1.24.1"
voluptuous = "0.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
